@@ -1,6 +1,6 @@
 //////////////////////////////////////////////////////////////////////////
 //
-//  Copyright (c) 2007-2010, Image Engine Design Inc. All rights reserved.
+//  Copyright (c) 2007-2013, Image Engine Design Inc. All rights reserved.
 //
 //  Redistribution and use in source and binary forms, with or without
 //  modification, are permitted provided that the following conditions are
@@ -67,8 +67,8 @@ namespace IECorePython
 			.add_property( "vertexIds", &vertexIds, "A copy of the mesh's list of vertex ids." )
 			.add_property( "interpolation", make_function( &MeshPrimitive::interpolation, return_value_policy<copy_const_reference>() ), &MeshPrimitive::setInterpolation )
 			.def( "setTopology", &MeshPrimitive::setTopology )
-			.def( "createBox", &MeshPrimitive::createBox ).staticmethod( "createBox" )
-			.def( "createPlane", &MeshPrimitive::createPlane ).staticmethod( "createPlane" )
+			.def( "createBox", &MeshPrimitive::createBox, ( arg_( "bounds" ) ) ).staticmethod( "createBox" )
+			.def( "createPlane", &MeshPrimitive::createPlane, ( arg_( "bounds" ), arg_( "divisions" ) = Imath::V2i( 1 ) ) ).staticmethod( "createPlane" )
 		;
 	}
 
