@@ -59,6 +59,7 @@ Improvements :
 * IECoreRI::ParameterList now accepts V2iData, converting it to RenderMan "integer[2]".
 * Added Renderer option "editable", along with editBegin() and editEnd() methods, to allow interactive rerendering functionality to be implemented. These are currently only implemented by IECoreRI::Renderer.
 * Switched to Boost Filesystem version 3
+* MeshPrimitive::createPlane can create multi-face planes using the divisions argument
 
 Bug Fixes :
 
